Revert "chore: update author"
This reverts commit adbd68fb281df9f0c986cd8ec60c135c75be68b3.

--- a/provider/woztell.yaml
+++ b/provider/woztell.yaml
@@ -11,7 +11,7 @@ credentials_for_provider:
     url: https://doc.woztell.com/docs/documentations/settings/access-token
 
 identity:
-  author: "Woztell"
+  author: "woztell"
   name: "woztell"
   label:
     en_US: "WOZTELL"
