--- a/tools/get_member_info.yaml
+++ b/tools/get_member_info.yaml
@@ -7,7 +7,7 @@ extra:
   python:
     source: tools/get_member_info.py
 identity:
-  author: Woztell
+  author: woztell
   icon: icon.svg
   label:
     en_US: Get Member Info By ID
