--- a/tools/get_members_by_tags.yaml
+++ b/tools/get_members_by_tags.yaml
@@ -7,7 +7,7 @@ extra:
   python:
     source: tools/get_members_by_tags.py
 identity:
-  author: Woztell
+  author: woztell
   icon: icon.svg
   label:
     en_US: Get Members By Tags
