--- a/tools/set_member_tags.yaml
+++ b/tools/set_member_tags.yaml
@@ -7,7 +7,7 @@ extra:
   python:
     source: tools/set_member_tags.py
 identity:
-  author: Woztell
+  author: woztell
   icon: icon.svg
   label:
     en_US: Set Member Tags
