--- a/tools/get_member_info.yaml
+++ b/tools/get_member_info.yaml
@@ -8,7 +8,7 @@ extra:
     source: tools/get_member_info.py
 identity:
   author: woztell
-  icon: icon.svg
+  icon: icon.jpg
   label:
     en_US: Get Member Info By ID
     zh_Hans: 获取成员信息
