--- a/tools/set_member_tags.yaml
+++ b/tools/set_member_tags.yaml
@@ -8,7 +8,7 @@ extra:
     source: tools/set_member_tags.py
 identity:
   author: woztell
-  icon: icon.svg
+  icon: icon.jpg
   label:
     en_US: Set Member Tags
     zh_Hans: 设置成员标签
